Work on tag overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -108,7 +108,8 @@ img {
   border-radius: 10%;
   background: #d5ebf5;
   margin: 1% 1% 1% 0;
-  padding: 3%;
+  padding: 2%;
+  -webkit-hyphens: auto;
 }
 
 a {
